sql-log-parser/src-tauri/build_errors.txt
cargo :     Checking sql-log-parser v0.1.0 (D:\
linh_ta_linh_tinh\log-reader\sql-log-parser\src
-tauri)
At line:1 char:1
+ cargo check 2>&1 | Out-String | Set-Content b
uild_errors.txt
+ ~~~~~~~~
    + CategoryInfo          : NotSpecified: (  
      Checking sq...rser\src-tauri):String) [  
  ], RemoteException
    + FullyQualifiedErrorId : NativeCommandErr 
   or
 
warning: unused imports: `EncodingDetector`, `I
so2022JpDetection`, and `Utf8Detection`
 --> src\file_reader.rs:5:17
  |
5 | use chardetng::{EncodingDetector, Iso2022Jp
Detection, Utf8Detection};
  |                 ^^^^^^^^^^^^^^^^  ^^^^^^^^^
^^^^^^^^^  ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#
[warn(unused)]`) on by default

error[E0599]: no variant or associated item nam
ed `Yes` found for enum `Iso2022JpDetection` in
 the current scope
  --> src\file_reader.rs:67:92
   |
67 |         let mut detector = chardetng::Enco
dingDetector::new(chardetng::Iso2022JpDetection
::Yes);
   |                                           
                                               
  ^^^ variant or associated item not found in `
Iso2022JpDetection`

error[E0599]: no variant or associated item nam
ed `Yes` found for enum `Utf8Detection` in the 
current scope
  --> src\file_reader.rs:69:75
   |
69 |         let top_encoding = detector.guess(
None, chardetng::Utf8Detection::Yes);
   |                                           
                                ^^^ variant or 
associated item not found in `Utf8Detection`

For more information about this error, try `rus
tc --explain E0599`.
warning: `sql-log-parser` (lib) generated 1 war
ning
error: could not compile `sql-log-parser` (lib)
 due to 2 previous errors; 1 warning emitted

